# roblox-dumper

./: CMakeLists.txt  CMakePresets.json  README.md  cloudflare_tunnel.bat
docs/content/docs/: configuration.mdx  everything-dumped.mdx  index.mdx  meta.json  running-the-tool.mdx  setup-guide.mdx
docs/content/docs/guides/: index.mdx
docs/public/: _headers  offsets.cs  offsets.h  offsets.hpp  offsets.json  offsets.py
docs/public/version-1a951716f19e4638/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-26c90be22e0d4758/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-2b1721d47abf49aa/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-2e6461290a3541f5/: offsets.h  offsets.hpp  offsets.json  offsets.py
docs/public/version-36a2600cebf1487d/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-390ba09e7e944154/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-3e7a57d7e53b4881/: offsets.h
docs/public/version-460909c4fe904aae/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-497d232246664187/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-5cf2272675e145f5/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-6776addb8fbc4d17/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-689e359b09ad43b0/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-695a88dd8425491f/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-760d064d05424689/: offsets.cs  offsets.py
docs/public/version-80c7b8e578f241ff/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-8b8c34790f814a73/: offsets.hpp  offsets.json
docs/public/version-9377ee10133e4be3/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-9affbe66b2624d20/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-9d412f44a6fe4081/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-a3424bc01593490b/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-acc4b74f79e743b9/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-ae421f0582e54718/: offsets.cs  offsets.h  offsets.py
docs/public/version-b130242ed064436f/: offsets.cs  offsets.h  offsets.json
docs/public/version-b4b85190815347e0/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-bf6344c9c23446bf/: offsets.h  offsets.json  offsets.py
docs/public/version-cd1c5b7638444807/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-d54fb60046ac4018/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-d599f7fc52a8404c/: offsets.json  offsets.py
docs/public/version-d66094bc9ae84754/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-ddf02245bdbb428c/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-df7528517c6849f7/: offsets.cs  offsets.h  offsets.json  offsets.py
docs/public/version-ec412128eba3476e/: offsets.cs  offsets.h  offsets.json  offsets.py
lua/ServerScriptService/: RemoteController.lua
rblx/: game.rbxl
src/: main.cpp
src/bridge/: bridge.cpp  bridge.h  types.h
src/control/: control.cpp  control.h  control.hpp
src/control/client/: client.cpp  client.h  types.h
src/dumper/: dumper.cpp  dumper.h  macros.h
src/dumper/stages/: stages.h
src/dumper/stages/atmosphere/: atmosphere.cpp  atmosphere.h
src/dumper/stages/base_part/: base_part.cpp  base_part.h
src/dumper/stages/bloom_effect/: bloom_effect.cpp  bloom_effect.h
src/dumper/stages/camera/: camera.cpp  camera.h
src/dumper/stages/character_mesh/: character_mesh.cpp  character_mesh.h
src/dumper/stages/data_model/: data_model.cpp  data_model.h
src/dumper/stages/gui_base2d/: gui_base2d.cpp  gui_base2d.h
src/dumper/stages/gui_object/: gui_object.cpp  gui_object.h
src/dumper/stages/humanoid/: humanoid.cpp  humanoid.h
src/dumper/stages/instance/: instance.cpp  instance.h
src/dumper/stages/lighting/: lighting.cpp  lighting.h
src/dumper/stages/mesh_part/: mesh_part.cpp  mesh_part.h
src/dumper/stages/mouse_service/: mouse_service.cpp  mouse_service.h
src/dumper/stages/player/: player.cpp  player.h
src/dumper/stages/proximity_prompt/: proximity_prompt.cpp  proximity_prompt.h
src/dumper/stages/script/: script.cpp  script.h
src/dumper/stages/script_context/: script_context.cpp  script_context.h
src/dumper/stages/sky/: sky.cpp  sky.h
src/logger/: logger.cpp  logger.h
src/memory/: memory.cpp  memory.h  rtti.cpp
src/process/: process.cpp  process.h
src/process/helpers/: helpers.cpp  helpers.h  zydis.h
src/process/memory/: memory.cpp  memory.h
src/process/rtti/: rtti.cpp  rtti.h
src/process/xref/: xref.cpp  xref.h
src/roblox/: offsets.h
src/roblox/instance/: instance.cpp  instance.h
src/scanner/: scanner.cpp
src/scanner/phases/: ProximityPrompt.hpp  atmosphere.hpp  base_part.hpp  charactermesh.hpp  color_correction_effect.hpp  data_model.hpp  gui_object.hpp  highlight.hpp  humanoid.hpp  lighting.hpp  mouse_service.hpp  part.hpp  player.hpp  proximity_prompt.hpp  script.hpp  terrain.hpp  text_label.hpp  ui_gradient.hpp  visual_engine.hpp
src/utils/: config.cpp  config.hpp  offset_registry.hpp  structs.h
src/writer/: writer.cpp  writer.h
(+20 files in other folders)
